# PersonalKM

./: .env.example  .gitignore  00-README-PHASE-1-4.md  2026-07-02.md  AGENTS.md  ANALYSIS-COMPLETE-DECISION-TIME.md  ARCHIVE-STRATEGY.md  CHANGELOG.md  CHECKLIST.md  COMPARISON-KARPATHY-VS-PERSONALKM.md  DEBUG-YOUTUBE-NOT-FOUND.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-COMPLETE.md  DEPLOYMENT-COMPLETE.txt  DESIGN.md  DOCS-INVENTORY.md  ENHANCEMENT-ANALYSIS.md  ENHANCEMENT-DECISION.md  FINAL-STATUS-2026-06-13.txt  HEALTH-CHECK-SYSTEM.md  IMPLEMENTATION-DELIVERY.md  IMPLEMENTATION-SUMMARY.txt  IMPROVEMENT-BACKLOG.md  INBOX-MIGRATION-LOG.md  KARPATHY-ENHANCEMENT-SUMMARY.md  KNOWLEDGE-DECAY-GUIDE.md  LINE Bot + Obsidian 連結整理系統：需求與實施結論.md  LLM-WIKI-BOT-INTEGRATION-PLAN.md  LLM-WIKI-DEPLOYMENT-GUIDE.md  LLMWIKI-INTEGRATION-CHANGENOTE.md  MIGRATION.md  OPTION-B-COMPLETE.md  OPTION-B-SUMMARY.md  PHASE-1-4-COMPLETE.md  PHASE-1-4-ROADMAP.md  PHASE-4-MONITORING-CHECKLIST.md  PREVENTION-SYSTEM-COMPLETE.md  PROJECT-DOCUMENTATION-PROCESS.md  Procfile  QUICK-REFERENCE.md  (+16 more)
.obsidian/: workspace.json
Inbox/: 2026-06-04-openai.com.md
Tech/: 2026-06-04-ai-時代非技術人最該學的設計能力-把-human-sop-變成-agentic-workflow.md  2026-06-04-claude-code-安裝手把手教學-從零開始,搭配-cc-switch-輕鬆切換模型-電腦王阿達.md  2026-06-04-instagram-2-3-4-5-6-7.md  2026-06-04-instagram-2-3-4-5.md  2026-06-04-instagram-2-3-4.md  2026-06-04-opencode基本功ep03-近乎無限的用量-opencode-go方案心得_ai工具分工學-最聰明的模型做規劃,最便-2.md  2026-06-04-opencode基本功ep03-近乎無限的用量-opencode-go方案心得_ai工具分工學-最聰明的模型做規劃,最便.md  2026-06-04-🤖-手把手教你建立第一個-copilot-agent!不用寫程式就能上線!.md  (+1 more)
bot/: __init__.py  (+21 more)
(+1185 files in other folders)
