[project]
name = "personalkm"
version = "0.2.0"
description = "Personal KM pipeline: LINE capture -> resolve -> LLM synthesis -> wiki"
requires-python = ">=3.9"
dependencies = [
  "pyyaml>=6.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "readability-lxml>=0.8",
  "html2text>=2024.2",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]        # ollama uses stdlib HTTP; gemini optional
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
